fixes text width on mobile

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -232,6 +232,9 @@
 .post > .post-content {
   word-wrap: break-word;
   width: 35em;
+  @include media-query($on-palm) {
+    width: 85%;
+  }
 }
 /**
 *  Events
